compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__assignments__rebound_function_and_arg.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "pub fn x() {\n  Nil\n}\n\npub fn main(x) {\n  let x = False\n  x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn x() {
  Nil
}

pub fn main(x) {
  let x = False
  x
}


----- COMPILED NIX
let x = { }: null; main = x: let x'1 = false; in x'1; in { inherit x main; }
