compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__assignments__variable_message.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "\npub fn expect(value, message) {\n  let assert Ok(inner) = value as message\n  inner\n}\n"
---
----- SOURCE CODE

pub fn expect(value, message) {
  let assert Ok(inner) = value as message
  inner
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  expect =
    value: message:
    let
      _assert' =
        if value.__gleamTag != "Ok" then
          builtins.throw
            (makeError
              "let_assert"
              "my/mod"
              3
              "expect"
              message
              { value = value; })
        else null;
      inner = builtins.seq _assert' value._0;
    in
    builtins.seq _assert' inner;
in
{ inherit expect; }
