compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__assignments__variable_used_in_pattern_and_assignment.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "pub fn main(x) {\n  let #(x) = #(x)\n  x\n}\n"
---
let
  main = x: let _pat' = [ x ]; x'1 = (builtins.elemAt _pat' 0); in x'1;
in
{ inherit main; }
